Cluster initial setup

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Game of Thrones</title>
+		<meta name="author" content="Ruida Xie & Tong Wang">
+		<!-- Mobile Specific Metas -->
+	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	    <!-- Script-->
 		<script type="text/javascript" src="js/d3.js"></script>	
 		<script type="text/javascript" src="js/main.js"></script>
+		<!-- CSS-->
 		<style type="text/css">
 			/* No style rules here yet */		
 		</style>
 	</head>
 	<body>
+		<div class="wrap">
+			<div id="GoTVis"></div>
+		</div>
 	</body>
 </html>
