finished index.html. added loom.js.:

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<title>Game of Thrones</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="author" content="Ruida Xie & Tong Wang">
+		<title>Game of Thrones</title>
 		<!-- Mobile Specific Metas -->
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<!-- Google fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Macondo+Swash+Caps|Macondo" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Cormorant:300,400" rel="stylesheet">
 	    <!-- Script-->
 		<script type="text/javascript" src="js/d3.js"></script>	
+		<script type="text/javascript" src="js/loom.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<!-- CSS-->
 		<style type="text/css">
