Error detected: need to try another way extract houses.

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 		<!-- Mobile Specific Metas -->
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<!-- Google fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Macondo+Swash+Caps|Macondo" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Cormorant:300,400" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Macondo+Swash+Caps|Macondo" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Cormorant:300,400" rel="stylesheet"> -->
 	    <!-- Script-->
-		<script type="text/javascript" src="js/d3.js"></script>	
+		<!-- <script type="text/javascript" src="js/d3.js"></script>	 -->
+		<script src="https://d3js.org/d3.v4.min.js"></script>
 		<script type="text/javascript" src="js/loom.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
+		<!-- <script type="text/javascript" src="js/main.js"></script> -->
 		<!-- CSS-->
-		<style type="text/css">
-			/* No style rules here yet */		
-		</style>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="wrap">
 			<div id="GoTVis"></div>
 		</div>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
