added show death button to shwo death status

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<div class="wrap">
 			<div id="GoTVis"></div>
 		</div>
+		<button class='button' id='btn-death'>Show Deceased</button>
 		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/death.js"></script>
 	</body>
 </html>
