--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<!-- <script type="text/javascript" src="js/d3.js"></script>	 -->
 		<script src="https://d3js.org/d3.v4.min.js"></script>
 		<script type="text/javascript" src="js/loom.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<!-- <script type="text/javascript" src="js/main.js"></script> -->
 		<!-- CSS-->
 		<link href="style.css" rel="stylesheet">
