--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class='node-list-item'>${item}</div>
 		</script>
 		<!-- CSS-->
-		<link href="style.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		</br><img src="got.png">
